--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ build1:
   stage: build
   script:
     - echo "Do your build here"
-    - ping -c 10 127.0.0.1
+    - ip addr
 
 test1:
   stage: test
