--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,6 @@ before_script:
   - echo "Before script section"
   - echo "For example you might run an update here or install a build dependency"
   - echo "Or perhaps you might print out some debugging details"
-  - ip addr
-  - pwd
   - whoami
 
 
@@ -18,7 +16,7 @@ after_script:
 build1:
   stage: build
   script:
-    - echo "Do your build here"
+    - mvn package
 
 test1:
   stage: test
