--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,8 @@ before_script:
   - echo "For example you might run an update here or install a build dependency"
   - echo "Or perhaps you might print out some debugging details"
   - whoami
-
+  - docker info
+  - mvn package
 
 
 after_script:
@@ -16,6 +17,7 @@ after_script:
 build1:
   stage: build
   script:
+    - docker info
     - mvn package
 
 test1:
