--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ build1:
   stage: build
   script:
     - mvn package -Dmaven.test.skip=true
+    - java -jar target/demo-0.0.1-SNAPSHOT.jar
 
 test1:
   stage: test
