--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ before_script:
   - echo "Before script section"
   - echo "For example you might run an update here or install a build dependency"
   - echo "Or perhaps you might print out some debugging details"
-
+  - kubectl version
 
 after_script:
   - echo "After script section"
@@ -21,7 +21,7 @@ test1:
   stage: test
   script:
     - echo "Do a test here"
-    - echo "For example run a test suite"
+    - echo "For example run a                                                                                                 test suite"
 
 test2:
   stage: test
