--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,4 +33,5 @@ deploy1:
   image: kubectl:v1.18.5
   script:
     - mkdir $HOME/.kube && cat $KUBE_CONFIG > $HOME/.kube/config
+    - kubectl version
     - kubectl -n xiaopang patch deployment nginx -p '{"spec":{"template":{"spec":{"containers":[{"name":"nginx","env":[{"name":"RESTART_TIME","value":"'$(date +%s)'"}]}]}}}}'
