--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ test2:
 
 deploy1:
   stage: deploy
-  image: istio/kubectl:latest
+  image: istio/kubectl:1.5.10
   script:
     - whoami
     - mkdir $HOME/.kube && cat $KUBE_CONFIG > $HOME/.kube/config
