--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,10 +14,10 @@ test1:
     - echo "before"
   script:
     - ls -al
-    - docker build -t demo-0.0.1.jar .
+    - docker build -t demo-0.0.2.jar .
     - docker images
     ##- docker login -u robot$danya-build -p eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE1OTYwMDkzNTcsImlhdCI6MTU5MzQxNzM1NywiaXNzIjoiaGFyYm9yLXRva2VuLWlzc3VlciIsImlkIjozLCJwaWQiOjcsImFjY2VzcyI6W3siUmVzb3VyY2UiOiIvcHJvamVjdC83L3JlcG9zaXRvcnkiLCJBY3Rpb24iOiJwdXNoIiwiRWZmZWN0IjoiIn1dfQ.RMUDz7z-lrSSGwJlNZRP6_1VtVTw0Sg73ho4wbnTgwcepDf5QCG-9tpvxUgP2jgezgj9JpKXoGXHsU-AuA8xv9Xpp3t_L-St7WWWNivm1VbSogFwO8r6iU3z9FFx3sGT_g7xPGPJ4BXLyoLt2rMsXlgUzEIOvyCl5B7KFvSXU0tNTgfvvX-5aBFkU8zXQ632lXxWoYbsLhdSb6auUxClaMLymKlCHLhbMqJPI7nK1JfA-pKWTRPlzTC7i3mCfFPfknA5wN2RuqdIfIZZJ9yJLU8F6tHJykGF2umwOZKhg1GBs-hkS1TFYZ4pgEzkbfEtgipihoC6qK7z39SopPM1FgZ8-uKVym9g6erjx0KPBvliPpkeS6HARSIUTN3h6cvQojMcb6B_RSttyixxsyTqDKV3Y4hx4QjCE0jP6pt41ASeWbkelwgk0jJVkemayLkW-zRmi_8-As2rVgCBC3iHRep1Iymhrt2liNnqEEJNqOkffW_htTMIH6zWQXg7KYoXYuodzkXVrqiQlTsb6HUPKWsAOe5o4jLqhZVCg7HUDHCrreB-4jpgjgKFbdXLgDlCrRbW4a4USICSQoWqzUNo-8AXhzH1El6_Guvv8qnJx2lOw-5cAlgLkDk7mIResITQkb6nvcDboIFDghQOytbAeBv80Waz7y48D0cAxRKBaVM 10.20.0.108:2375
-    - docker push harbor.sunvalley.com.cn/danya/necho/demo-0.0.1.jar
+    - docker push  demo-0.0.2.jar/latest harbor.sunvalley.com.cn/danya/necho/demo-0.0.1.jar
     - echo "Do a test here"
     - echo "For example run a                                                                                                 test suite"
 
