--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,11 +15,11 @@ test1:
     - echo $CI_COMMIT_SHA
   script:
     - ls -al
-    - docker build -t harbor.sunvalley.com.cn/danya/necho/demo-0.0.2.jar:$CI_COMMIT_SHA .
+    - docker build -t necho/demo-0.0.2.jar:$CI_COMMIT_SHA .
     - docker images
     - docker login -u necho.duan -p iot123456abC harbor.sunvalley.com.cn
     - docker info
-    - docker push  https://harbor.sunvalley.com.cn/danya/necho/demo-0.0.2.jar:$CI_COMMIT_SHA
+    - docker push  danya/necho/demo-0.0.2.jar:$CI_COMMIT_SHA
     - echo "Do a test here"
     - echo "For example run a  test suite"
 
