--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ test1:
     - docker images
     - docker login -u necho.duan -p iot123456abC harbor.sunvalley.com.cn
     - docker info
-    - docker push  danya/necho/demo-0.0.2.jar:$CI_COMMIT_SHA
+    - docker push  https://harbor.sunvalley.com.cn/danya/necho/demo-0.0.2.jar:$CI_COMMIT_SHA
     - echo "Do a test here"
     - echo "For example run a  test suite"
 
