--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,7 @@ k8s deploy:
   stage: deploy
   image: istio/kubectl:1.5.10
   script:
+    - apt update -y | apt install gettext-base -y
     - mkdir $HOME/.kube && cat $KUBE_CONFIG > $HOME/.kube/config
     - export NAMESPACE=xiaopang
     - export REPLICAS=2
