--- a/deploy.yaml
+++ b/deploy.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
         - image: ${IMAGE}
           imagePullPolicy: Always
-          command: [ "/bin/bash", "-c", "--" ]
+          command: [ "/bin/bash", "-c", "--" ]  ##
           args: [ "while true; do sleep 30; done;" ]
           name: demon
           ports:
